--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,17 @@
     <link rel="icon" href="%PUBLIC_URL%/film.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Tapestry&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Tonec Cinema</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
